<resources>
    <string name="app_name">Namuthon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--ocr-->
    <string name="ocr_tv_title">계약서 분석</string>
    <string name="ocr_btn_camera">사진 찍기</string>
    <string name="ocr_btn_ocr">텍스트 추출</string>
    <string name="ocr_tv_ocr">결과 출력</string>

    <string name="ocr_btn_next">다음으로</string>
    <string name="ocr_keyword_title">계약 안전도 등급</string>
    <string name="ocr_report">간단 리포트</string>
    <string name="ocr_keyword">keyword</string>
    <string name="ocr_keyword_check">해당 키워드를 꼼꼼하게 확인하세요 👀</string>
    <string name="ocr_check_content">주택임대차표준계약서에\n요구되는 내용 중 5가지가 빠져있어요!</string>
    <string name="ocr_check_more">법의 보호를 받기 위한 중요 사항을 정리하였습니다.\n계약 체결 전에 꼭 확인하세요.</string>
    <string name="ocr_tv_more">내용 보기 ></string>

    <string name="report_main_title">전세사기 리포트</string>
    <string name="report01_title">1. 보증금 유형을 선택해주세요</string>
    <string name="report01_charter_all">전세</string>
    <string name="report01_charter_half">반전세</string>
    <string name="report01_charter_none">월세</string>
    <string name="report_next">다음</string>
    <string name="report_back">이전</string>
    <string name="report02_title">2. 보증금과 월세를 입력해주세요</string>
    <string name="report02_100million">+1억 원</string>
    <string name="report02_1million">+1백만 원</string>
    <string name="report02_10million">+1천만 원</string>
    <string name="report01_charter_money">보증금</string>
    <string name="report02_won">원</string>
    <string name="report02_10won">+10만 원</string>
    <string name="report02_50won">+50만 원</string>
    <string name="report01_charter_none_money">월세</string>
    <string name="report03_01_title">3. 집 유형을 선택해주세요</string>
    <string name="report03_01_yet">계약을 완료했어요</string>
    <string name="report03_01_almost_done">계약을 고민하고 있어요 / 아직 둘러보고 있어요</string>
    <string name="report03_01_looking">둘 다 아니에요. 둘러보고 있어요</string>
    <string name="report03_02_title">3-2. 현재 상태를 좀 더 자세히 알려주세요</string>
    <string name="bottom_navigation_all">전체</string>
    <string name="bottom_navigation_camera">계약 분석</string>
    <string name="bottom_navigation_report">위험도 분석</string>
    <string name="bottom_navigation_home">홈</string>
    <string name="report04_title">4. 집 주소를 알려주세요</string>
    <string name="report04_adress">주소</string>
    <string name="report_process_guide">전세사기 위험도\n분석을 진행 중이에요</string>
    <string name="report_done_adress">주소</string>
    <string name="report_done_done">완료/미완료</string>
    <string name="report_done_case">유형</string>
    <string name="report_done_rate">계약 안전도 등급</string>
    <string name="report_done_real_money"><b>실거래가</b> 평균은 749700000원이고,\n<b>현재 거래가</b>는 </string>
    <string name="report_done_real_money2">98300000입니다.</string>
    <string name="report_done_report">간단 리포트</string>
    <string name="report_done_report_short1">이 집은 보증금이 높아 최우선 변제가</string>
    <string name="report_done_report_short2"><b>불가능한 집이에요</b></string>
    <string name="report_done_how">낮은 안전도 등급을 받은 경우 어떻게 해야 하나요?</string>
    <string name="report_done_check_now">시세 확인 하러가기</string>
    <string name="report_done_bill_check">임대인의 체납 세금 확인 하러가기</string>
    <string name="report_done_place_check">공인중개사 사무소 확인 하러가기</string>
    <string name="report_done_insurance_check">전세보증보험 가입</string>

    <string name="home_ready_with_fortress">포트레스와 함께\n다가오는 미래를 준비해요</string>
    <string name="tv_home_quick">Quick Analysis</string>
    <string name="home_check_my_contract">내가 쓰는 계약서 괜찮은가..?</string>
    <string name="home_check_my_contact2">사진 기반 계약서 분석하기</string>
    <string name="home_user_name">김남우</string>
    <string name="home_user_name_sub"> 님을 위해 준비했어요</string>
    <string name="home_save_main_title">저장한 콘텐츠 모아보기</string>
    <string name="home_user_name_sub2">님이 저장한 콘텐츠</string>
    <string name="home_user_name_sub3">님께서 알아두시면 좋은 정보</string>
    <string name="home_save_description">전세 계약을 준비하고 계시나요?\n계약 시 사람들이 많이 하는 고민을 정리해 보았어요.</string>
    <string name="home_save_list1">집주인이 바뀔 예정이라 불안해요😩</string>
    <string name="home_save_list2">신축이라 위험하지 않을지 걱정돼요😨</string>
    <string name="home_save_list3">처음 집을 구해서 걱정돼요🤯</string>
    <string name="home_save_list4">전세대출이 가능한지 궁금해요🙄</string>
    <string name="home_save_list5">빚 말소 조건의 계약이에요😯</string>
    <string name="home_cheat_list_main_title">전세사기 유형 알아보기</string>
    <string name="home_check_my_report">전세사기 위험을 줄여드립니다</string>
    <string name="home_check_my_report2">전세사기 위험도 분석하러 가기</string>
    <string name="home_prepared3">내가 구독한 관심 매물 알리미</string>
    <string name="home_prepared2">저장한 콘텐츠 모아보기</string>

</resources>