<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/ab_home_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.Toolbar"
                app:elevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tb_home_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="left"
                    android:background="?attr/colorPrimary">

                    <ImageView
                        android:id="@+id/iv_home_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_text_logo" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/shape_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ab_home_appbar" />

            <TextView
                android:id="@+id/tv_home_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="70dp"
                android:text="@string/home_ready_with_fortress"
                android:textAppearance="@style/TextAppearance.Namuthon.Title"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ab_home_appbar" />

            <TextView
                android:id="@+id/tv_home_quick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/tv_home_quick"
                android:textAppearance="@style/TextAppearance.Namuthon.Title"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/tv_home_welcome"
                app:layout_constraintTop_toBottomOf="@id/tv_home_welcome" />

            <ImageView
                android:id="@+id/iv_home_report"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="11dp"
                android:background="@drawable/background_component"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_quick" />


            <TextView
                android:id="@+id/tv_home_check_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_check_my_report"
                android:textAppearance="@style/TextAppearance.Namuthon.Title"
                android:textColor="@color/main_color"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_home_report"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="@+id/iv_home_report" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/home_check_my_report2"
                android:textAppearance="@style/TextAppearance.Namuthon.Title"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/tv_home_check_ocr"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_check_report" />
            <TextView
                android:id="@+id/tv_home_check_ocr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_report_choose_button"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="50dp"
                android:text="@string/home_check_my_contract"
                android:textAppearance="@style/TextAppearance.Namuthon.Title"
                android:textColor="@color/main_color"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/iv_home_report" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingStart="20dp"
                android:text="@string/home_check_my_contact2"
                android:textAppearance="@style/TextAppearance.Namuthon.Title"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/tv_home_check_ocr"
                app:layout_constraintTop_toTopOf="@id/tv_home_check_ocr" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_report_right_arrow"
                app:layout_constraintBottom_toBottomOf="@id/tv_home_check_ocr"
                app:layout_constraintEnd_toEndOf="@id/tv_home_check_ocr"
                app:layout_constraintTop_toTopOf="@id/tv_home_check_ocr" />

            <TextView
                android:id="@+id/tv_home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/home_user_name"
                android:textAppearance="@style/TextAppearance.Namuthon.Title"
                android:textColor="@color/main_color"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_check_ocr" />

            <TextView
                android:id="@+id/tv_home_name_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/home_user_name_sub"
                android:textAppearance="@style/TextAppearance.Namuthon.Title"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tv_home_name"
                app:layout_constraintTop_toBottomOf="@id/tv_home_check_ocr" />

            <TextView
                android:id="@+id/iv_home_report_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="13sp"
                android:background="@drawable/shape_report_check_box"
                android:paddingVertical="15sp"
                android:paddingStart="43dp"
                android:text="내 리포트/계약서 모아보기"
                android:textAppearance="@style/TextAppearance.Namuthon.Title"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/tv_home_name" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_report_right_arrow"
                app:layout_constraintBottom_toBottomOf="@id/iv_home_report_all"
                app:layout_constraintEnd_toEndOf="@id/iv_home_report_all"
                app:layout_constraintTop_toTopOf="@id/iv_home_report_all" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_home_icon3"
                app:layout_constraintBottom_toBottomOf="@+id/iv_home_report_all"
                app:layout_constraintStart_toStartOf="@id/iv_home_report_all"
                app:layout_constraintTop_toTopOf="@+id/iv_home_report_all" />

            <TextView
                android:id="@+id/tv_home_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="13sp"
                android:background="@drawable/shape_report_check_box"
                android:paddingVertical="15sp"
                android:paddingStart="43dp"
                android:text="@string/home_prepared2"
                android:textAppearance="@style/TextAppearance.Namuthon.Title"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/iv_home_report_all" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_report_right_arrow"
                app:layout_constraintBottom_toBottomOf="@id/tv_home_save"
                app:layout_constraintEnd_toEndOf="@id/tv_home_save"
                app:layout_constraintTop_toTopOf="@id/tv_home_save" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_home_icon1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_home_save"
                app:layout_constraintStart_toStartOf="@id/tv_home_save"
                app:layout_constraintTop_toTopOf="@+id/tv_home_save" />


            <TextView
                android:id="@+id/tv_home_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="13sp"
                android:background="@drawable/shape_report_check_box"
                android:paddingVertical="15sp"
                android:paddingStart="43dp"
                android:text="@string/home_prepared3"
                android:textAppearance="@style/TextAppearance.Namuthon.Title"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/tv_home_save" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_report_right_arrow"
                app:layout_constraintBottom_toBottomOf="@id/tv_home_notice"
                app:layout_constraintEnd_toEndOf="@id/tv_home_notice"
                app:layout_constraintTop_toTopOf="@id/tv_home_notice" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_home_icon2"
                app:layout_constraintBottom_toBottomOf="@+id/tv_home_notice"
                app:layout_constraintStart_toStartOf="@id/tv_home_notice"
                app:layout_constraintTop_toTopOf="@+id/tv_home_notice" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
